--- a/src/home/user/user.css
+++ b/src/home/user/user.css
@@ -1,109 +1,82 @@
-.user {
-    width: 100px;
-    border: 2px solid black;
-    border-radius: 25px;
-    padding: 20px;
-    margin-left: 10px;
-}
-.usermodelul ul {
-    display: inline-flex;
-    overflow: hidden;
+.user-card {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    padding: 15px;
+  }
+  
+  .user-post {
     width: 100%;
-    position: relative;
-}
-@media (min-width: 312px) and (max-width: 480px) {
-
-}
-
-@media (min-width: 481px) and (max-width: 768px) {
-
-}
-
-@media (min-width: 769px) and (max-width: 1024px){
-
-}
-
-@media (min-width: 1025px) {
-    .imgprof img {
-        width: 180px;
-        border-radius: 50%;
-        margin-top: 80px;
-        margin-left: 90px;
-    }
-    .nameofproleowner {
-        display: inline-flex;
-    }
-    .nameofproleowner h2 {
-        margin-left: 7px;
-    }
-    .userprofilesec1 {
-        display: inline-flex;
-    }
-    .alltextabouttheprofile {
-        margin-top: 80px;
-        margin-left: 50px;
-    }
-    .btnprofiles {
-        display: inline-flex;
-    }
-    .homebtnprofilesusrs {
-        background-color: transparent;
-        color: black;
-        font-size: medium;
-        margin-left: 40px;
-        border: 1px solid transparent;
-        padding: 10px;
-    }
-    .unfollowbtn {
-        background-color: transparent;
-        color: #00b4d8;
-        border: 1px solid #00b4d8;
-        padding: 10px;
-        font-size: medium;
-        margin-left: 30px;
-        border-radius: 25px;
-    }
-    .followbtn {
-        padding: 10px;
-        border: 1px solid #00b4d8;
-        background-color: #00b4d8;
-        color: white;
-        border-radius: 15px;
-        font-size: medium;
-        margin-left: 30px;
-    }
-    .profilesectionusers {
-        display: inline-flex;
-    }
-    .detailsaboutusersection {
-        margin-top: 70px;
-        margin-left: 80px;
-    }
-    .lastnameuserdetails {
-        margin-left: 7px;
-    }
-    .nameofuser h2 {
-        display: inline-flex;
-        font-weight: 200;
-    }
-    .folloiwngandunfloowingbtn button {
-        display: inline-flex;
-        border: 1px solid transparent;
-    }
-    .folloiwngandunfloowingbtn h3 {
-        margin-right: 7px;
-    }
-    .biouserdetils h3 {
-        font-weight: 200;
-    }
-    .nameofuser h3 {
-        font-weight: 200;
-    }
-    .shopssecuserporfileinusers {
-        margin-top: 100px;
-    }
-    .shopssecuserporfileinusers h2 {
-        text-align: center;
-        margin-bottom: 40px;
-    }
-}
+  }
+  
+  /* User Post Header Styles */
+  .user-post-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  .user-post-image {
+    margin-right: 15px;
+  }
+  
+  .user-post-image img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  
+  .user-post-details {
+    flex: 1;
+  }
+  
+  .user-post-username {
+    font-weight: bold;
+    text-decoration: none;
+    color: #333;
+  }
+  
+  .user-unique-id {
+    color: #555;
+    margin-top: 2px;
+    font-size: 14px;
+  }
+  
+  /* User Bio Styles */
+  .user-bio {
+    margin-bottom: 10px;
+    color: #333;
+  }
+  
+  /* User Post Actions Styles */
+  .user-post-actions {
+    margin-bottom: 10px;
+  }
+  
+  .profile-link-button {
+    padding: 8px 16px;
+    border: none;
+    background-color: #3897f0;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+    display: inline-block;
+  }
+  
+  /* User Post Footer Styles */
+  .user-post-footer {
+    display: flex;
+    color: #555;
+  }
+  
+  .user-post-footer div {
+    margin-right: 20px;
+  }
+  
+  .heart-icon,
+  .comment-icon {
+    margin-right: 5px;
+    vertical-align: middle;
+  }
