Your commit message

--- a/src/home/user/Userdisplay.css
+++ b/src/home/user/Userdisplay.css
@@ -34,6 +34,10 @@
   margin-right: 10px;
 }
 
+.all-shop-profile {
+  text-align: center;
+}
+
 .followbtn {
   background-color: #3897f0;
   color: #fff;
