Your commit message

--- a/src/home/custom-shop/sections-parts/sections.css
+++ b/src/home/custom-shop/sections-parts/sections.css
@@ -528,7 +528,7 @@
 .section-7-build-section button,
 .section-7-build-section-preview button {
     background-color: transparent;
-    color: #000000;
+    color: #ffffff;
     padding: 10px 20px;
     border: 2px solid white;
     border-radius: 5px;
