Your commit message

--- a/src/home/custom-shop/sections-parts/sections.css
+++ b/src/home/custom-shop/sections-parts/sections.css
@@ -505,13 +505,16 @@
     padding: 20px;
     height: auto;
 }
+.section-7-build-section-preview {
+    background-image: url('../../header/images/Untitled\ design\ \(7\).png');
+}
 
 .section-7-build-section,
 .section-7-build-section-preview {
     background-size: cover;
     background-position: center;
     border-radius: 15px;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(2, 2, 2, 0.8);
     background-blend-mode: multiply;
     display: flex;
     flex-direction: column;
@@ -527,10 +530,10 @@
 
 .section-7-build-section button,
 .section-7-build-section-preview button {
-    background-color: transparent;
-    color: #ffffff;
+    background-color: rgb(255, 255, 255);
+    color: #000000;
     padding: 10px 20px;
-    border: 2px solid white;
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
     margin-top: 20px;
     font-size: 20px;
@@ -538,8 +541,8 @@
 
 .section-7-build-section button:hover,
 .section-7-build-section-preview button:hover {
-    background-color: rgb(243, 237, 237);
-    color: white;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     transition: 0.3s;
     cursor: pointer;
 }
