--- a/src/home/myprofile/my-profile-edit.css
+++ b/src/home/myprofile/my-profile-edit.css
@@ -14,7 +14,7 @@
     padding: 8px;
     margin-bottom: 12px;
     border-radius: 4px;
-    border: 1px solid #ccc;
+    border: 2px solid #000000;
     width: 100%;
   }
   
@@ -29,4 +29,33 @@
   
   .profile-edit-form button:hover {
     background-color: #0056b3;
+  }
+  .header-edit-my-profile {
+    padding: 20px;
+    background-color: #f2f2f2;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+  }
+  
+  .header-edit-my-profile h2 {
+    margin-bottom: 15px;
+    color: #333;
+  }
+  
+  .header-edit-my-profile a button {
+    padding: 10px 20px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    background-color: transparent;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .header-edit-my-profile a button:hover {
+    background-color: transparent;
   }
