--- a/src/home/chat/chat.css
+++ b/src/home/chat/chat.css
@@ -4,14 +4,14 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  background-color: black;
+  background-color: rgb(255, 248, 248);
 }
 
 .chat-main {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  background-color: #000000;
+  background-color: #ffffff;
   border-radius: 15px;
   margin: 10px;
   padding: 0;
@@ -93,7 +93,7 @@
 .inputforchat input {
   flex-grow: 1;
   padding: 15px;
-  border: none;
+  border: 1px solid black;
   border-bottom-left-radius: 25px;
   border-top-left-radius: 25px;
 }
@@ -101,7 +101,7 @@
 .inputforchat button {
   background-color: #6f42c1; /* Purple color */
   color: #fff; /* White text */
-  border: none;
+  border: 1px solid #6f42c1;
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
   padding: 15px 20px;
